// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ArticleFooter [name] /> renders 1`] = `
<ArticleFooter
  name="JavaScript"
>
  <hr />
  <p
    className="has-text-end"
  >
    Is this article inaccurate? 
    <a
      href="https://github.com/geotrev/undernet/tree/master/app/docs/javascript.md"
    >
      Edit this page on Github!
    </a>
  </p>
</ArticleFooter>
`;

exports[`<ArticleFooter [name] /> renders component API 1`] = `
<ArticleFooter
  hasAPI={true}
  name="Collapsible"
>
  <h3>
    API
  </h3>
  <p>
    Call one of the following scripts from Undernet's JavaScript (not both!). This should happen only once on page load.
  </p>
  <pre
    className="language-s"
  >
    Undernet.start()
  </pre>
  <pre
    className="language-s"
  >
    Undernet.Collapsible.start()
  </pre>
  <p>
    Alternatively, if you're using a UI framework like React, you can do any of the above API calls but pass a selector string to scope Undernet and its events within the corresponding element:
  </p>
  <pre
    className="language-s"
  >
    Undernet.Collapsible.start(#wrapper-element)
  </pre>
  <hr />
  <p
    className="has-text-end"
  >
    Is this article inaccurate? 
    <a
      href="https://github.com/geotrev/undernet/tree/master/app/docs/collapsible.md"
    >
      Edit this page on Github!
    </a>
  </p>
</ArticleFooter>
`;
